--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,linux,python,windows,jupyternotebook
+
+# my attachments
+something.py
